FINALLY fixed the border collapse on the table lol yikes

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -2,11 +2,11 @@ body {
   background-color: grey;
 }
 
-#employeeTable {
+.employeeTable {
   border-collapse: collapse;
 }
 
-#employeeTable td {
+.employeeTable td {
   border: 1px solid black;
   padding: 6px 10px;
 }
